--- a/res/layout/act_pull_to_refresh_sample.xml
+++ b/res/layout/act_pull_to_refresh_sample.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.huewu.pla.lib.extra.MultiColumnPullToRefreshListView
+    <me.maxwin.view.XListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
