--- a/res/layout/act_pull_to_refresh_sample.xml
+++ b/res/layout/act_pull_to_refresh_sample.xml
@@ -5,6 +5,8 @@
 
     <me.maxwin.view.XListView
         android:id="@+id/list"
+        android:scrollbars="vertical"
+         android:fastScrollEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
