--- a/res/layout/infos_list.xml
+++ b/res/layout/infos_list.xml
@@ -1,38 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/news_list"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/news_item_bg"
+    android:orientation="vertical" >
 
-    <LinearLayout
-  
-        android:id="@+id/news_list"
+    <com.dodowaterfall.widget.ScaleImageView
+        android:id="@+id/news_pic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/news_item_bg"
-        android:orientation="vertical" >
+        android:src="@null" />
 
-        <ImageView
-            android:id="@+id/news_pic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@null" />
+    <TextView
+        android:id="@+id/news_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="false"
+        android:textColor="#656565" />
 
-        <TextView
-            android:id="@+id/news_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/news_pic"
-            android:singleLine="false"
-            android:textColor="#656565" />
+    <TextView
+        android:id="@+id/news_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:gravity="right"
+        android:textColor="#9f9f9f" />
 
-        <TextView
-            android:id="@+id/news_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/news_title"
-            android:layout_gravity="right|bottom"
-            android:gravity="right"
-            android:textColor="#9f9f9f" />
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
